// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar render avatar ITypeAvatar.icon 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 30,
        "height": 60,
        "justifyContent": "center",
        "width": 60,
      },
      {
        "backgroundColor": "#4ABA79",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#FFF",
        "fontFamily": "Neotis",
        "fontSize": 30,
      }
    }
  >
    
  </Text>
</View>
`;

exports[`Avatar render avatar ITypeAvatar.text 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 30,
        "height": 60,
        "justifyContent": "center",
        "width": 60,
      },
      {
        "backgroundColor": "#4ABA79",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 21,
          "lineHeight": 27,
        },
        undefined,
      ]
    }
  >
    ИП
  </Text>
</View>
`;

exports[`Avatar render avatar badge counter 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 30,
        "height": 60,
        "justifyContent": "center",
        "width": 60,
      },
      {
        "backgroundColor": "#4ABA79",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#FFF",
          "borderRadius": 13.5,
          "height": 27,
          "justifyContent": "center",
          "minWidth": 27,
          "zIndex": 1,
        },
        {
          "bottom": -3,
          "position": "absolute",
          "right": -3,
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 18,
            "lineHeight": 24,
          },
          {
            "color": "#F54D3D",
            "paddingHorizontal": 6,
            "textAlign": "center",
          },
        ]
      }
    >
      6
    </Text>
  </View>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 21,
          "lineHeight": 27,
        },
        undefined,
      ]
    }
  >
    ИП
  </Text>
</View>
`;

exports[`Avatar render avatar badge indicator 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 30,
        "height": 60,
        "justifyContent": "center",
        "width": 60,
      },
      {
        "backgroundColor": "#4ABA79",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderColor": "#FFF",
          "borderRadius": 6.75,
          "borderWidth": 1.5,
          "height": 13.5,
          "position": "absolute",
          "width": 13.5,
          "zIndex": 1,
        },
        {
          "backgroundColor": "#F54D3D",
        },
        {
          "bottom": 2,
          "right": 2,
        },
      ]
    }
  />
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 21,
          "lineHeight": 27,
        },
        undefined,
      ]
    }
  >
    ИП
  </Text>
</View>
`;

exports[`Avatar render avatar badge null 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 30,
        "height": 60,
        "justifyContent": "center",
        "width": 60,
      },
      {
        "backgroundColor": "#4ABA79",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 21,
          "lineHeight": 27,
        },
        undefined,
      ]
    }
  >
    ИП
  </Text>
</View>
`;

exports[`Avatar render avatar badge status 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 30,
        "height": 60,
        "justifyContent": "center",
        "width": 60,
      },
      {
        "backgroundColor": "#4ABA79",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "bottom": 0,
        "color": "#FAB742",
        "fontFamily": "Neotis",
        "fontSize": 18,
        "position": "absolute",
        "right": 0,
        "zIndex": 1,
      }
    }
  >
    
  </Text>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 21,
          "lineHeight": 27,
        },
        undefined,
      ]
    }
  >
    ИП
  </Text>
</View>
`;

exports[`Avatar render avatar disabled 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 30,
        "height": 60,
        "justifyContent": "center",
        "width": 60,
      },
      {
        "backgroundColor": "#4ABA79",
      },
      undefined,
      {
        "opacity": 0.5,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#FFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 21,
          "lineHeight": 27,
        },
        undefined,
      ]
    }
  >
    ИП
  </Text>
</View>
`;

exports[`Avatar render avatar not photo 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 30,
        "height": 60,
        "justifyContent": "center",
        "width": 60,
      },
      {
        "backgroundColor": "#4ABA79",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "uri": "https://vraki.net/",
      }
    }
    style={
      {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      }
    }
  />
</View>
`;

exports[`Avatar render avatar with photo L 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 45,
        "height": 90,
        "justifyContent": "center",
        "width": 90,
      },
      {
        "backgroundColor": "#4ABA79",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
      }
    }
    style={
      {
        "borderRadius": 45,
        "height": 90,
        "width": 90,
      }
    }
  />
</View>
`;

exports[`Avatar render avatar with photo S 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 18,
        "height": 36,
        "justifyContent": "center",
        "width": 36,
      },
      {
        "backgroundColor": "#4ABA79",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
      }
    }
    style={
      {
        "borderRadius": 18,
        "height": 36,
        "width": 36,
      }
    }
  />
</View>
`;

exports[`Avatar render avatar with photo XL 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 60,
        "height": 120,
        "justifyContent": "center",
        "width": 120,
      },
      {
        "backgroundColor": "#4ABA79",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
      }
    }
    style={
      {
        "borderRadius": 60,
        "height": 120,
        "width": 120,
      }
    }
  />
</View>
`;

exports[`Avatar render avatar with photo without size 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "borderRadius": 30,
        "height": 60,
        "justifyContent": "center",
        "width": 60,
      },
      {
        "backgroundColor": "#4ABA79",
      },
      undefined,
      {
        "opacity": 1,
      },
    ]
  }
>
  <Image
    accessibilityLabel="imageAvatar"
    onError={[Function]}
    source={
      {
        "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
      }
    }
    style={
      {
        "borderRadius": 30,
        "height": 60,
        "width": 60,
      }
    }
  />
</View>
`;

exports[`Avatar render without avatar border 1`] = `null`;
